--- a/auctionsite-n23/package.json
+++ b/auctionsite-n23/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.16.12",
+    "imagesloaded": "^5.0.0",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^1.2.4"
   },
   "devDependencies": {
+    "@types/imagesloaded": "^4.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
